--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mars Data</title>
+  <title>Mission to Mars</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -35,12 +35,9 @@
       <div class="col-md-3">
         <div class="panel panel-default">
           <div class="panel-body">
-            <h4>Current Weather on Mars</h4>
-            <p>{{mars_data.mars_weather}}</p>
+            <h4>Mars Facts</h4>
+            <p>{{mars_data.facts_table | safe}}}</p>
           </div>
-        </div>
-        <div>
-          {{mars_data.facts_table | safe}}
         </div>
       </div>
     </div>
