added website screenshot

--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -36,7 +36,7 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <h4>Mars Facts</h4>
-            <p>{{mars_data.facts_table | safe}}}</p>
+            <p>{{mars_data.facts_table | safe}}</p>
           </div>
         </div>
       </div>
